--- a/src/sections/InfoCardGrid.scss
+++ b/src/sections/InfoCardGrid.scss
@@ -1,5 +1,11 @@
+.info-cards {
+  --header-margin: var(--bloom-s3) 0 var(--bloom-s3) 0;
+  --title-font-size: var(--bloom-font-size-sm);
+  --info-card-font-size: var(--bloom-font-size-sm);
+}
+
 .info-cards__header {
-  @apply my-3;
+  margin: var(--header-margin);
 
   @screen md {
     margin-right: 1rem;
@@ -7,18 +13,7 @@
 }
 
 .info-cards__title {
-  @apply font-alt-sans;
-  @apply uppercase;
-  @apply text-sm;
-  @apply mb-5;
-  @apply pb-2;
-  @apply border-0;
-  @apply border-b-4;
-  @apply border-primary;
-  @apply font-semibold;
-  @apply text-gray-800;
-  @apply tracking-widest;
-  @apply inline-block;
+  font-size: var(--title-font-size);
 }
 
 .info-cards__subtitle {
@@ -30,16 +25,17 @@
   @screen md {
     @apply flex;
     @apply flex-wrap;
+    column-gap: 1rem;
   }
 
   .info-card {
     & > :not(.info-card__title) {
-      @apply text-sm;
+      font-size: var(--info-card-font-size);
     }
 
     @screen md {
-      width: calc(50% - 1rem);
-      margin-right: 1rem;
+      width: calc(50% - 0.5rem);
+      margin-right: auto;
     }
   }
 }
